--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ ul {
 .logo-tittel {
   color: var(--accent-color);
 }
+
 .navigation {
   display: flex;
   align-items: center;
@@ -126,6 +127,7 @@ ul {
   padding-right: 32px;
   padding-bottom: 10px;
   padding-left: 32px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
 
@@ -133,6 +135,14 @@ ul {
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
+  background-image: radial-gradient(
+      rgba(47, 48, 58, 0.8),
+      rgba(47, 48, 58, 0.8)
+    ),
+    url(../images/Header.jpg);
+
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .hero-titel {
@@ -184,8 +194,12 @@ ul {
 }
 
 .description-img {
+  display: block;
+  width: 270px;
+  height: 120px;
   background-color: #f5f4fa;
   border-radius: 4px;
+  padding: 25px 0px;
   margin-bottom: 55px;
 }
 
